Fix: Auto Hide - Bookmark overlap mode

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -5981,6 +5981,12 @@
     opacity: 0;
     will-change: margin-bottom, opacity;
   }
+  @supports -moz-bool-pref("userChrome.autohide.toolbar_overlap") {
+    #PersonalToolbar:not([customizing])[collapsed="true"] {
+      visibility: visible !important;
+      max-height: unset !important;
+    }
+  }
 
   #navigator-toolbox:is(:hover, :focus-within) #PersonalToolbar:not([customizing]) {
     margin-bottom: 0;
